recursion.lessons.recursion.spiral.SpiralUse.scala.error
SpiralUse:3: error: type mismatch;
 found   : Double(22.5)
 required: Int
    spiral(100,22.5,1,2);
               ^