recursion.lessons.recursion.spiral.SpiralUse.scala.code
override def run() {
    spiral(100,22.5,1,2);
}
